# mutli-objective-optimization

./: CMakeLists.txt  README.md  data  data10prct  plot.py  script.py
include/: alg_1d.hpp  alg_2d.hpp  alg_bin.hpp  data_struct_2d.hpp  graph.hpp  multigraph.hpp  tools.hpp
python/: plot_script.py  script.py  tree.py
save/dataset1/: graph1  graph10  graph12  graph13  graph16  graph17  graph18  graph19  graph2  graph3  graph4  graph6  graph8  graph9
save/dataset_2/: 2_1000_10  2_200_10  2_200_30  2_200_50  2_200_70  2_20_10  2_500_10  2_500_30  2_500_50  2_500_70  2_50_10
save/dataset_2_50_20p/: graph0  graph1  graph10  graph11  graph12  graph13  graph14  graph15  graph16  graph17  graph18  graph19  graph2  graph3  graph4  graph5  graph6  graph7  graph8  graph9
save/dataset_2_50_50p/: graph0  graph11  graph14  graph15  graph5  graph7
save/dataset_2_50_80p/: graph0  graph1  graph10  graph11  graph12  graph13  graph14  graph15  graph16  graph17  graph18  graph19  graph2  graph3  graph4  graph5  graph6  graph7  graph8  graph9
save/graph_to_plot/: 2_20_50  map  solution
save/set/: testtt
save/temp/: 2_1000_10  2_100_10  2_200_10  2_200_30  2_200_50  2_200_70  2_500_10  2_500_20  2_50_10  small_graph
save/test/: 2_20_20  map  solution
src/: alg_1d.cpp  alg_2d.cpp  alg_bin.cpp  data_struct_2d.cpp  graph.cpp  main.cpp  multigraph.cpp  tools.cpp
